iac/week-4/demo-7/deploy/department1/team1/cvm/.terragrunt-cache/h-bKEa-GDy_8_XTE5RhX1mq7cZY/FLuUg-7BF-jovOpqhB6X4_zwHJ4/iac/week-2/kustomize-example-2/base/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
spec:
  rules:
    - host: result.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
  ingressClassName: nginx
